[project]
name = "raglooker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "einops>=0.8.2",
    "flask>=3.1.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.3",
    "ollama>=0.6.0",
    "pandas>=3.0.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
]
